--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,38 @@
 <resources>
     <string name="app_name">ToneMe</string>
-    <string name="action_settings">Paramètres</string>
-    <string name="drawer_open">Ouvrir</string>
-    <string name="drawer_close">Fermer</string>
-    <string name="title_activity_rec_audio">Reconnaissance audio</string>
-    <string name="title_activity_rec_note">Reconnaissance de note</string>
-    <string name="title_activity_lec_partition">Lecture de partition</string>
-    <string name="note_c">Do</string>
-    <string name="note_d">Ré</string>
-    <string name="note_e">Mi</string>
-    <string name="note_f">Fa</string>
-    <string name="note_g">Sol</string>
-    <string name="note_a">La</string>
-    <string name="note_b">Si</string>
-    <string name="exercice_fail">Faux, essaye encore !</string>
-    <string name="exercice_skip">Passer</string>
-    <string name="pref_title_general">Général</string>
+    <string name="action_settings">Settings</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="title_activity_rec_audio">Audio recognition</string>
+    <string name="title_activity_rec_note">Note recognition</string>
+    <string name="note_c">C</string>
+    <string name="note_d">D</string>
+    <string name="note_e">E</string>
+    <string name="note_f">F</string>
+    <string name="note_g">G</string>
+    <string name="note_a">A</string>
+    <string name="note_b">B</string>
+    <string name="exercice_fail">Fail</string>
+    <string name="exercice_skip">Skip</string>
+    <string name="pref_title_display">Display</string>
+    <string name="pref_title_musical">Réglages musicaux</string>
     <string name="pref_title_exercices">Exercices</string>
-    <string name="pref_language">Langue</string>
-    <string name="pref_language_english">Anglais</string>
-    <string name="pref_language_french">Français</string>
+    <string name="pref_title_music_keys">Clefs</string>
+    <string name="pref_title_tones">Tones</string>
+    <string name="pref_language">Language</string>
+    <string name="pref_language_english">English</string>
+    <string name="pref_language_french">French</string>
+    <string name="pref_notes_keyboard_sum">Show notes on keyboard</string>
+    <string name="pref_notes_keyboard">Note labels</string>
+    <string name="pref_music_key_sol">Treble</string>
+    <string name="pref_music_key_fa">Bass</string>
+    <string name="pref_num_questions_sum">Number of questions in a test</string>
+    <string name="pref_num_questions">Number of questions</string>
+    <string name="pref_timer_sum">Limit time per question</string>
+    <string name="pref_timer">Set timer</string>
+    <string name="pref_timer_length_sum">Maximum allowed time (sec)</string>
+    <string name="pref_timer_length">Answer time</string>
+    <string name="pref_tones_low">Low</string>
+    <string name="pref_tones_medium">Medium</string>
+    <string name="pref_tones_high">High</string>
 </resources>
