--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="pref_music_key_fa">Bass</string>
     <string name="pref_num_questions_sum">Number of questions in a test</string>
     <string name="pref_num_questions">Number of questions</string>
+    <string name="pref_skip_sum">Go to next question without extra try</string>
+    <string name="pref_skip">Skip if wrong</string>
     <string name="pref_timer_sum">Limit time per question</string>
     <string name="pref_timer">Set timer</string>
     <string name="pref_timer_length_sum">Maximum allowed time (sec)</string>
